# WSLLMComm

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/api/: main.py
backend/api/router/: llm.py
backend/api/services/: llm.py
frontend/: Dockerfile
frontend/frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/frontend/src/: App.css  App.tsx  main.tsx
frontend/frontend/src/components/layout/: presenter.tsx
frontend/frontend/src/hooks/: useAPI.ts  useSSE.ts  useWebSocket.ts
frontend/frontend/src/pages/IndexPage/: container.tsx  presenter.tsx
frontend/frontend/src/types/: LlmTextDto.ts
